# programeercasus

./: .gitmodules  compose.yaml
backend/: pyproject.toml
backend/backend/: LearningResource.cs  Program.cs  backend.csproj
lumen-backend/: .gitignore  Dockerfile  KeycloakAuthService.cs  LearningResource.cs  LearningResourceDB.cs  Lumen.csproj  Lumen.sln  MapCustomIdentity.cs  Program.cs  appsettings.Development.json  appsettings.json  build-output.txt  buildoutput.txt
lumen-backend/controllers/: AuthController.cs  LearningResourcesController.cs  ValuesController.cs
lumen-backend/database/: LearningResourceDB.cs  User.cs  UserAccountDBContext.cs
lumen-backend/migrations/: 20260403133231_InitialCreate.Designer.cs  20260403133231_InitialCreate.cs  UserAccountDbContextModelSnapshot.cs
lumen-backend/migrations/LearningResourceDbMigrations/: 20260406114441_learningresourcedatabase.Designer.cs  20260406114441_learningresourcedatabase.cs  LearningResourceDbModelSnapshot.cs
lumen-backend/model/: LearningResource.cs
