[project]
name = "backend"
version = "0.1.0"
description = "API voor de backend van  de Wigo4it programeercasus, a MVP for an e-learning application."
readme = "README.md"
authors = [
    { name = "Felix de Natris", email = "felixdenatris@hotmail.nl" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
backend = "backend:main"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
